# cpplogger

./: CMakeLists.txt  LICENSE  README.md
examples/: CMakeLists.txt  example_main.cpp  test_logger.cpp
lib/: CMakeLists.txt
lib/compat/: std_cpp17_compat.h
lib/include/: log.h
lib/src/: log.cpp
src/: cpplog.cpp  cpplog.h  log.h  logger.cpp  std_cpp11_compat.h
